[package]
name = "dxbc"
version = "0.1.0"
authors = ["Felix Kaaman <trundmatu@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
term = "0.7.0"
winapi = { version = "0.3.9", features = ["d3d11tokenizedprogramformat"] }
